# Ardha

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SESSION_REPORT.md  commit_message.txt  docker-compose.yml
backend/: .env.example  .flake8  Dockerfile  README.md  alembic.ini  pyproject.toml  test_celery_config.py  test_celery_jobs.py  test_chat_service.py  test_database_models_validation.py  test_database_repositories.py  test_database_services.py  test_embedding_optimizations.py  test_formula_rollup_services.py  test_memory_api.py  test_memory_service_validation.py  test_memory_simple.py  test_milestones_e2e.py  test_notification_services.py  test_openrouter.py  test_prd_workflow.py  test_prd_workflow_fixed.py  test_research_workflow.py
backend/alembic/: env.py
backend/alembic/versions/: 04c06991cf98_remove_default_from_milestone_order_.py  1486390ee9b8_add_database_system_models.py  1fb7c46f33c8_add_git_and_file_models.py  33d711c094a5_add_notification_system.py  3fbba54b25d7_remove_unique_constraint_from_milestone_.py  436d6f22de59_add_database_system_models.py  56c4a4a45b08_add_chat_models_with_messages_and_ai_.py  606c1d22f358_add_server_default_to_database_entry_.py  636c5644ce57_add_workflow_execution_model.py  80d0d1bfae70_add_github_integration_models.py  9ee261875120_add_milestones_table.py  9fec61d55870_add_workflow_execution_table.py  b4e31b4c9224_initial_migration_users_table.py  b7dd91c3f022_add_memory_models.py  d843b8a8385a_add_task_models_with_dependencies_and_.py  dcca79a04cb7_add_openspec_proposals_table.py  (+1 more)
backend/projects/: config.json
backend/tests/: conftest.py  manual_job_test.py  test_celery_config.py  test_chat_api.py
(+398 files in other folders)
