[tool.poetry]
name = "ardha-backend"
version = "0.1.0"
description = "Ardha - AI-Native Project Management Platform Backend"
authors = ["ardhaecosystem <ardhaecosystem@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ardha", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.4"
uvicorn = {extras = ["standard"], version = "0.32.0"}
pydantic = "2.9.2"
pydantic-settings = "2.6.0"
sqlalchemy = "2.0.35"
alembic = "1.13.3"
asyncpg = "0.29.0"
psycopg2-binary = "2.9.9"
redis = "5.1.1"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
bcrypt = "4.1.2"
python-multipart = "0.0.12"
httpx = "0.27.2"
aiofiles = "24.1.0"
python-dotenv = "1.0.1"
langchain = "0.3.7"
langchain-openai = "0.2.8"
langgraph = "0.2.45"
openai = "1.54.3"
qdrant-client = "1.12.1"
websockets = "13.1"
celery = "5.4.0"
gitpython = "3.1.43"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-cov = "5.0.0"
black = "24.10.0"
isort = "5.13.2"
mypy = "1.13.0"
ruff = "0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
